{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 171,
  "lineage": "605fdcf2-2781-2362-df68-d012c150a138",
  "resources": [
    {
      "module": "module.my_instace",
      "mode": "managed",
      "type": "aws_instance",
      "name": "trf_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08962a4068733a2b6",
            "arn": "arn:aws:ec2:us-east-2:869926065419:instance/i-06d37df02a0774306",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06d37df02a0774306",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02f96dc52fcbaced6",
            "private_dns": "ip-190-168-1-175.us-east-2.compute.internal",
            "private_ip": "190.168.1.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ce699c4bac8f6f07",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-059c799aae1a316b3",
            "tags": {
              "Name": "instace_One"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-010096736d3611b6f",
              "sg-09d346c3baeffacf1"
            ]
          },
          "dependencies": [
            "module.my_vpc.aws_subnet.main",
            "module.my_vpc.aws_vpc.trf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_instace1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "trf_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-042e8287309f5df03",
            "arn": "arn:aws:ec2:us-east-1:869926065419:instance/i-09daee9607d8dcce2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09daee9607d8dcce2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-010c7f716080d8c37",
            "private_dns": "ip-190-168-1-59.ec2.internal",
            "private_ip": "190.168.1.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0db02e36937af171c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-088506f23386be909",
            "tags": {
              "Name": "instace_One"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-001b5f4b7bf2caa74"
            ]
          },
          "dependencies": [
            "module.my_vpc1.aws_subnet.main",
            "module.my_vpc1.aws_vpc.trf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_security",
      "mode": "data",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-08962a4068733a2b6",
            "arn": "arn:aws:ec2:us-east-2:869926065419:instance/i-06d37df02a0774306",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-06d37df02a0774306",
            "instance_id": "i-06d37df02a0774306",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-02f96dc52fcbaced6",
            "private_dns": "ip-190-168-1-175.us-east-2.compute.internal",
            "private_ip": "190.168.1.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ce699c4bac8f6f07",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-059c799aae1a316b3",
            "tags": {
              "Name": "instace_One"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-010096736d3611b6f",
              "sg-09d346c3baeffacf1"
            ]
          }
        }
      ]
    },
    {
      "module": "module.my_security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:869926065419:security-group/sg-010096736d3611b6f",
            "description": "security_group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-010096736d3611b6f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "rule",
            "name_prefix": "",
            "owner_id": "869926065419",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "instace_security"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb39a36895ee846a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.trf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_security1",
      "mode": "data",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-042e8287309f5df03",
            "arn": "arn:aws:ec2:us-east-1:869926065419:instance/i-09daee9607d8dcce2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-09daee9607d8dcce2",
            "instance_id": "i-09daee9607d8dcce2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-010c7f716080d8c37",
            "private_dns": "ip-190-168-1-59.ec2.internal",
            "private_ip": "190.168.1.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0db02e36937af171c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-088506f23386be909",
            "tags": {
              "Name": "instace_One"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-001b5f4b7bf2caa74"
            ]
          }
        }
      ]
    },
    {
      "module": "module.my_security1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869926065419:security-group/sg-04281fee57107dfb9",
            "description": "security_group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04281fee57107dfb9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "rule",
            "name_prefix": "",
            "owner_id": "869926065419",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "instace_security"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2b4f9b4157d0377"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc1.aws_vpc.trf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:869926065419:subnet/subnet-059c799aae1a316b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "190.168.1.0/24",
            "id": "subnet-059c799aae1a316b3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "869926065419",
            "tags": {
              "Name": "subnet_one"
            },
            "vpc_id": "vpc-0eb39a36895ee846a"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.trf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "trf_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:869926065419:vpc/vpc-0eb39a36895ee846a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "190.168.0.0/16",
            "default_network_acl_id": "acl-03f58160c46ec1137",
            "default_route_table_id": "rtb-0a4559a92a1fc80fb",
            "default_security_group_id": "sg-09d346c3baeffacf1",
            "dhcp_options_id": "dopt-cec0afa5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0eb39a36895ee846a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a4559a92a1fc80fb",
            "owner_id": "869926065419",
            "tags": {
              "Name": "vpc_one"
            }
          }
        }
      ]
    },
    {
      "module": "module.my_vpc1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869926065419:subnet/subnet-088506f23386be909",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "190.168.1.0/24",
            "id": "subnet-088506f23386be909",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "869926065419",
            "tags": {
              "Name": "subnet_one"
            },
            "vpc_id": "vpc-0b2b4f9b4157d0377"
          },
          "dependencies": [
            "module.my_vpc1.aws_vpc.trf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "trf_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869926065419:vpc/vpc-0b2b4f9b4157d0377",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "190.168.0.0/16",
            "default_network_acl_id": "acl-0ce45010da0257d5b",
            "default_route_table_id": "rtb-017464b57615f2ed1",
            "default_security_group_id": "sg-001b5f4b7bf2caa74",
            "dhcp_options_id": "dopt-3619354c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b2b4f9b4157d0377",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-017464b57615f2ed1",
            "owner_id": "869926065419",
            "tags": {
              "Name": "vpc_one"
            }
          }
        }
      ]
    }
  ]
}